09-Ingress-Basic/kube-manifests/03-Ingress-Basic(v1).yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
spec:  
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: app1-service
            port: 
              number: 80
      # - path: /asdf/*
      #   pathType: Prefix
      #   backend:
      #     service: 
      #       name: app1-service
      #       port: 
      #         number: 80
